--- a/CodeBRDG_TT/appsettings.json
+++ b/CodeBRDG_TT/appsettings.json
@@ -8,5 +8,9 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=localhost;Initial Catalog=MessengerDb;User Id=sa;Password=12345;Persist Security Info=True;Pooling=False;Multiple Active Result Sets=False;Connect Timeout=60;Encrypt=True;Trust Server Certificate=True;Command Timeout=0;MultipleActiveResultSets=true"
   },
+  "RateLimiting": {
+    "PermitLimit": 10,
+    "WindowInSeconds": 1
+  },
   "AllowedHosts": "*"
 }
